typescript/checker/tests/conformance/expressions/unaryOperators/voidOperator/voidOperatorWithBooleanType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            38,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/unaryOperators/voidOperator/voidOperatorWithBooleanType.ts:2:5
  |
2 | var BOOLEAN: boolean;
  |     ^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            225,
        ),
        hi: BytePos(
            226,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/voidOperator/voidOperatorWithBooleanType.ts:14:16
   |
14 | var objA = new A();
   |                ^

